Bug 58807 - No sound with statement "beep"
Summary: No sound with statement "beep"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Thomas Arnhold
URL:
Whiteboard: BSA target:4.1.0 target:4.0.3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-27 14:53 UTC by paolo_debortoli
Modified: 2013-04-04 08:42 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document with macro (10.96 KB, application/vnd.oasis.opendocument.text)
2013-01-06 08:36 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description paolo_debortoli 2012-12-27 14:53:15 UTC
the  macro 

Sub ExampleBeep

beep

beep

beep

end sub

doesn't produce ay sound.
Operating System: Ubuntu
Version: 4.0.0.0.beta2
Comment 1 tommy27 2013-01-02 12:32:09 UTC
hi Paolo,
I've just tried on Windows Vista 64bit

the "beep" command doesn't produce any sound in LibO 4.0 beta 2 and in 3.6.4 as well (so changing the version and O/S fields).

however I wonder if it ever worked... I mean, do you report previous LibO versions where the "beep" command did work?
Comment 2 paolo_debortoli 2013-01-02 15:23:58 UTC
no,  you are right.  but in case the command/option should be excluded or deleted and non signed as working...  it would be better.
Comment 3 tommy27 2013-01-02 18:04:34 UTC
I have been told on the Italian OpenOffice newsgroup that the "beep" works in AOO.

does anybody has an old 3.3.x, 3.4.x or 3.5.x LibO version to see where the "beep" was lost?
Comment 4 tommy27 2013-01-03 10:58:53 UTC
more tests done on Windows 7 64bit.

beep works in:
3.4.5
3.6.3
3.6.4

beep doesn't work in:
4.0.0.0.beta1+ (Build ID: 546faa79bf3b1e4b222f182d43a9839106a398d)
Comment 5 tommy27 2013-01-03 21:35:19 UTC
the weird thing about my tests is that "beep" in version 3.6.4 works on Win7 64bit while doesn't work on Vista 64bit...

maybe there are some soundcard issues and that system sound is disabled in some computers and enabled in others...

more tests from other users are welcome.
Comment 6 Rainer Bielefeld Retired 2013-01-06 08:35:33 UTC
[Reproducible] with parallel installation of  "LOdev  4.0.0.0.beta2   -  GERMAN UI / German Locale  [Build ID: 4104d660979c57e1160b5135634f732918460a0)]"  {tinderbox: @6, pull time 2012-12-20} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch

Worked fine with 3.6.4, so regression

Already [Reproducible] with Server-installation of Master "3.7.0.alpha0+  – ENGLISH UI [Build ID: f2e622]" {tinderbox: Win-x86@16, pull time 2012-10-06 09:31:39} on German WIN7 Home Premium (64bit) UserInstallation=$SYSUSERCONFIG/LOdev/3

No idea what tommy27's observation might mean, I agree that that might be something different.
Comment 7 Rainer Bielefeld Retired 2013-01-06 08:36:32 UTC
Created attachment 72581 [details]
Sample Document with macro

Simply click the button in the document for a test.
Comment 8 LeMoyne Castle 2013-01-09 08:41:53 UTC
This commit: 
http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f6101cfef4c2e45d9f1f1b3a61ef94799e4526b

on Bug 48549 caused the removal of the system beep call from the BASIC beep command method in basic/source/runtime/methods.cxx  (~ line 4215)
during wholesale removal of beep calls from the rest of LibreOffice.  

The statement 
    Sound::Beep();
was removed - was just after parameter checks.
Comment 9 LeMoyne Castle 2013-01-09 09:22:58 UTC
The implementation used to be in: vcl/source/app/sound.cxx and that file is gone from master/core.  Bug 48549 has three commits - none remove the corollary header and the source.  
Sound::Beep removal found with QGit -- http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bdf6fc7c71c4c49e6d6f83d56ac953272ad16d5 
so there's a clue on how to bring it back.
Comment 10 Björn Michaelsen 2013-02-23 21:37:47 UTC
That was an intended removal.
Comment 11 Rainer Bielefeld Retired 2013-02-24 07:59:21 UTC
I believe we have some misunderstanding here.

Bug 48549 seems to be concerning removal of spontaneous sounds caused by LibO error messages or whatever. With most arguments I agree, but for example I think it's obvious that we need some kind of sound alarm if a macro running in a hidden window or elsewhere in the background aborts because of an error.

Without doubt, a Basic beep statement what does not beep is a bug (help for this statement does not tell anything like "does not sound"). And even if we would decide that the beep should not beep (I don't believe that) at least Help for that statement will have to be amended.
 
So I reopen bug for final finishing research and work
Comment 12 Commit Notification 2013-04-03 10:26:42 UTC
Thomas Arnhold committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=47664d3f2e12649d324b031ca6ffd5589fe3d197

fdo#58807 bring Beep() for basic back



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 tommy27 2013-04-03 11:25:49 UTC
please consider backporting to LibO 4.0.3
Comment 14 Commit Notification 2013-04-04 08:42:58 UTC
Thomas Arnhold committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b2ace6a294e2ce2171e3911a6f8a2ed7d8de4812&h=libreoffice-4-0

fdo#58807 bring Beep() for basic back


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.