vcl/inc/salframe.hxx
@@ -184,6 +184,8 @@ public:                     // public for Sal Implementation
 
     virtual void            UpdateSettings( AllSettings& rSettings ) = 0;
 
+    virtual void                Beep() = 0;
+
     // returns system data (most prominent: window handle)
     virtual const SystemEnvData*
                             GetSystemData() const = 0;
