vcl/inc/unx/gtk/gtkframe.hxx
@@ -406,6 +406,8 @@ public:
 
     virtual void                UpdateSettings( AllSettings& rSettings );
 
+    virtual void                Beep();
+
     // returns system data (most prominent: window handle)
     virtual const SystemEnvData*    GetSystemData() const;
 
